# Kronos

./: .env.example  .gitignore  README.md  main.py  product_desc.md  pyproject.toml
examples/: polygon_fetcher.py  polygon_prediction_example.py
finetune/: config.py  qlib_test.py
get_stock_data/: __init__.py  itick_data_fetcher.py  polygon_data_fetcher.py  readme.md
run_kronos/: kronos_predictor.py  readme.md
task_generator/: __init__.py  readme.md  task_generator.py
util/: __init__.py  itick_api.py  task_model.py
